--- a/recipes/cleanup/podman.yml
+++ b/recipes/cleanup/podman.yml
@@ -3,6 +3,6 @@ modules:
     remove:
       - podman
       - podman-compose
-      - podman-tui
       - podmansh
       - cockpit-podman
+      - toolbox
