--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -1,5 +1,5 @@
 # image will be published to ghcr.io/<user>/<name>
-name: k8s-node
+name: server
 # description will be included in the image's metadata
 description: This is my personal OS image for one-off servers.
 
@@ -10,7 +10,7 @@ image-version: stable # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: cleanup/ucore.yml
+  - from-file: cleanup/bootc.yml
   - from-file: cleanup/nano.yml
   - from-file: cleanup/coreos-installer.yml
 
