fix: move podmansh removal to aurora-dx

--- a/recipes/cleanup/aurora-dx.yml
+++ b/recipes/cleanup/aurora-dx.yml
@@ -9,6 +9,7 @@ modules:
       - lxd
       - p7zip
       - podman-tui
+      - podmansh
 
   - type: default-flatpaks
     notify: false # Send notification after install/uninstall is finished (true/false)
