--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -18,6 +18,7 @@ modules:
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
+  - from-file: features/git-ssh.yml
 
   - from-file: components/cockpit.yml
 
