feat: install google-cloud-cli

--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -15,6 +15,7 @@ modules:
 
   - from-file: tools/general.yml
   - from-file: tools/git-ssh.yml
+  - from-file: tools/gcloud-cli.yml
 
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
