--- a/recipes/laptop.yml
+++ b/recipes/laptop.yml
@@ -18,6 +18,7 @@ modules:
   - from-file: tools/general.yml
   - from-file: tools/tlp.yml
   - from-file: tools/git-ssh.yml
+  - from-file: tools/gcloud-cli.yml
 
   # Software
   - from-file: flatpaks/integrated.yml
