--- a/recipes/k8s-node-hci-zfs-nvidia.yml
+++ b/recipes/k8s-node-hci-zfs-nvidia.yml
@@ -19,6 +19,7 @@ modules:
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
+  - from-file: features/zfs-load-key-service.yml
 
   - from-file: components/kubernetes.yml
   - from-file: components/nvidia-container-toolkit.yml
