--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -19,6 +19,7 @@ modules:
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
+  - from-file: features/raised-ulimits.yml
 
   - from-file: components/kubernetes.yml
   - from-file: components/cockpit.yml
