--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -21,6 +21,7 @@ modules:
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
+  - from-file: features/raised-ulimits.yml
 
   - from-file: components/cockpit.yml
 
