fix: stop using deprecated module yaml schema

--- a/recipes/features/sshable.yml
+++ b/recipes/features/sshable.yml
@@ -1,4 +1,6 @@
-type: files
-files:
-  - source: sshable
-    destination: /
+modules:
+  - type: files
+
+    files:
+      - source: sshable
+        destination: /
