--- a/recipes/flatpaks/integrated.yml
+++ b/recipes/flatpaks/integrated.yml
@@ -1,23 +1,24 @@
-type: default-flatpaks
+modules:
+  - type: default-flatpaks
 
-notify: true # Send notification after install/uninstall is finished (true/false)
+    notify: true # Send notification after install/uninstall is finished (true/false)
 
-system:
-  # If no repo information is specified, Flathub will be used by default
+    system:
+      # If no repo information is specified, Flathub will be used by default
 
-  install:
-    # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
-    - io.github.dvlv.boxbuddyrs
-    - io.missioncenter.MissionCenter
-    - org.gnome.Firmware
-    - org.kde.filelight
-    - org.kde.gwenview
-    - org.kde.kcachegrind
-    - org.kde.kcalc
-    - org.kde.kleopatra
-    - org.kde.kontact
-    - org.kde.krita
-    - org.kde.okteta
-    - org.kde.okular
-    - org.kde.yakuake
-    - org.fedoraproject.MediaWriter
+      install:
+        # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
+        - io.github.dvlv.boxbuddyrs
+        - io.missioncenter.MissionCenter
+        - org.gnome.Firmware
+        - org.kde.filelight
+        - org.kde.gwenview
+        - org.kde.kcachegrind
+        - org.kde.kcalc
+        - org.kde.kleopatra
+        - org.kde.kontact
+        - org.kde.krita
+        - org.kde.okteta
+        - org.kde.okular
+        - org.kde.yakuake
+        - org.fedoraproject.MediaWriter
