--- a/recipes/flatpaks/work.yml
+++ b/recipes/flatpaks/work.yml
@@ -1,13 +1,14 @@
-type: default-flatpaks
+modules:
+  - type: default-flatpaks
 
-notify: true # Send notification after install/uninstall is finished (true/false)
+    notify: true # Send notification after install/uninstall is finished (true/false)
 
-system:
-  # If no repo information is specified, Flathub will be used by default
+    system:
+      # If no repo information is specified, Flathub will be used by default
 
-  install:
-    # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
-    - com.slack.Slack
-    - io.dbeaver.DBeaverCommunity
-    - io.httpie.Httpie
-    - us.zoom.Zoom
+      install:
+        # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
+        - com.slack.Slack
+        - io.dbeaver.DBeaverCommunity
+        - io.httpie.Httpie
+        - us.zoom.Zoom
