--- a/recipes/tools/tlp.yml
+++ b/recipes/tools/tlp.yml
@@ -1,8 +1,9 @@
-type: rpm-ostree
+modules:
+  - type: rpm-ostree
 
-repos:
-  # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+    repos:
+      # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
 
-install:
-  - tlp
-  - tlp-rdw
+    install:
+      - tlp
+      - tlp-rdw
