--- a/recipes/laptop.yml
+++ b/recipes/laptop.yml
@@ -24,6 +24,7 @@ modules:
   - from-file: flatpaks/integrated.yml
   - from-file: flatpaks/thirdparty.yml
   - from-file: flatpaks/work.yml
+  - from-file: flatpaks/office.yml
 
   # Features
   - from-file: features/ublue-update.yml
