chore: rechunk bazzite image, maybe it will recompress as well

--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -33,42 +33,49 @@ jobs:
             variant: fedora-release-kinoite-41-38.noarch
             version: 41
             maximize_build_space: true
+            rechunk: false
 
           - recipe: workstation-nvidia
             arch: x86_64
             variant: fedora-release-kinoite-41-38.noarch
             version: 41
             maximize_build_space: true
+            rechunk: false
 
           - recipe: laptop
             arch: x86_64
             variant: fedora-release-kinoite-41-38.noarch
             version: 41
             maximize_build_space: true
+            rechunk: false
 
           - recipe: k8s-node
             arch: x86_64
             variant: fedora-release-coreos-41-38.noarch
             version: 41
             maximize_build_space: false
+            rechunk: false
 
           - recipe: k8s-node-hci-zfs-nvidia
             arch: x86_64
             variant: fedora-release-coreos-41-38.noarch
             version: 41
             maximize_build_space: false
+            rechunk: false
 
           - recipe: server
             arch: x86_64
             variant: fedora-release-coreos-41-38.noarch
             version: 41
             maximize_build_space: false
+            rechunk: false
 
           - recipe: bazzite
             arch: x86_64
             variant: fedora-release-coreos-41-38.noarch
             version: 41
             maximize_build_space: true
+            rechunk: true
 
     steps:
       # the build is fully handled by the reusable github action
@@ -82,3 +89,6 @@ jobs:
 
           # enabled by default, disable if your image is small and you want faster builds
           maximize_build_space: ${{ matrix.maximize_build_space }}
+
+          # disabled by default, enable to experiment
+          rechunk: ${{ matrix.rechunk }}
