--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -47,7 +47,7 @@ jobs:
             variant: fedora-release-kinoite-41-38.noarch
             version: 41
             maximize_build_space: true
-            rechunk: false
+            rechunk: true
 
           - recipe: k8s-node
             arch: x86_64
