--- a/recipes/laptop.yml
+++ b/recipes/laptop.yml
@@ -30,5 +30,6 @@ modules:
   - from-file: features/ublue-update.yml
   - from-file: features/sshable.yml
   - from-file: features/dotfiles.yml
+  - from-file: features/trust-custom-ca.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
