--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -22,6 +22,7 @@ modules:
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
   - from-file: features/raised-ulimits.yml
+  - from-file: features/trust-custom-ca.yml
 
   - from-file: components/cockpit.yml
 
