--- a/recipes/bazzite.yml
+++ b/recipes/bazzite.yml
@@ -5,8 +5,7 @@ description: This is my personal OS image for dedicated gaming boxes.
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/bazzite
-#image-version: stable # latest is also supported if you want new updates ASAP
-image-version: 41.20241112.1
+image-version: stable # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
