--- a/recipes/laptop.yml
+++ b/recipes/laptop.yml
@@ -31,5 +31,6 @@ modules:
   - from-file: features/sshable.yml
   - from-file: features/dotfiles.yml
   - from-file: features/trust-custom-ca.yml
+  - from-file: features/trust-nextdns-ca.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
