--- a/recipes/workstation-nvidia.yml
+++ b/recipes/workstation-nvidia.yml
@@ -32,5 +32,6 @@ modules:
   - from-file: features/dotfiles.yml
   - from-file: features/libvirt-hooks.yml
   - from-file: features/trust-custom-ca.yml
+  - from-file: features/trust-nextdns-ca.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
