feat: build bazzite-nvidia as well

--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -74,6 +74,13 @@ jobs:
             maximize_build_space: true
             rechunk: ${{ github.event_name == 'schedule' }}
 
+          - recipe: bazzite-nvidia
+            arch: x86_64
+            variant: fedora-release-coreos-41-38.noarch
+            version: 41
+            maximize_build_space: true
+            rechunk: false
+
     steps:
       # the build is fully handled by the reusable github action
       - name: Build Custom Image
