feat: build for the Steam Deck

--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -88,6 +88,13 @@ jobs:
             maximize_build_space: true
             rechunk: false
 
+          - recipe: bazzite-deck
+            arch: x86_64
+            variant: fedora-release-coreos-41-38.noarch
+            version: 41
+            maximize_build_space: true
+            rechunk: true
+
     steps:
       # the build is fully handled by the reusable github action
       - name: Build Custom Image
