feat(laptop-kinoite): add tailscale and a nerd font

--- a/recipes/laptop-kinoite.yml
+++ b/recipes/laptop-kinoite.yml
@@ -13,6 +13,10 @@ modules:
   # Cleanup
   - from-file: cleanup/nano.yml
 
+  # Components
+  - from-file: components/nerd-fonts.yml
+  - from-file: components/tailscale.yml
+
   # Tools
   - from-file: tools/general.yml
   - from-file: tools/tlp.yml
