feat: create kinoite version for workstation

--- a/.github/workflows/bluebuild.yml
+++ b/.github/workflows/bluebuild.yml
@@ -32,6 +32,13 @@ jobs:
             maximize_build_space: true
             rechunk: true
 
+          - recipe: workstation-kinoite
+            arch: x86_64
+            variant: fedora-release-kinoite-41-38.noarch
+            version: 41
+            maximize_build_space: true
+            rechunk: true
+
           - recipe: workstation-nvidia
             arch: x86_64
             variant: fedora-release-kinoite-41-38.noarch
