feat: install adb and virtualisation stuff into Kinoite builds

--- a/recipes/components/nerd-fonts.yml
+++ b/recipes/components/nerd-fonts.yml
@@ -2,3 +2,6 @@ modules:
   - type: rpm-ostree
     install:
       - cascadia-code-nf-fonts
+      - powerline-fonts
+      - adobe-source-code-pro-fonts
+      - monaspace-nerd-fonts
