--- a/recipes/k8s-node-hci-zfs-nvidia.yml
+++ b/recipes/k8s-node-hci-zfs-nvidia.yml
@@ -21,6 +21,7 @@ modules:
   - from-file: features/no-suspend.yml
   - from-file: features/zfs-load-key-service.yml
   - from-file: features/raised-ulimits.yml
+  - from-file: features/auto-blank-terminal.yml
 
   - from-file: components/kubernetes.yml
   - from-file: components/nvidia-container-toolkit.yml
