--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -16,6 +16,7 @@ modules:
 
   - from-file: tools/general.yml
 
+  - from-file: features/wifi-drivers.yml
   - from-file: features/dotfiles.yml
   - from-file: features/sshable.yml
   - from-file: features/no-suspend.yml
