--- a/.github/workflows/daily-bluebuild.yml
+++ b/.github/workflows/daily-bluebuild.yml
@@ -1,9 +1,9 @@
-name: isos
+name: daily-bluebuild
 
 on:
   schedule:
     - cron:
-        "00 07 * * *" # build at 06:00 UTC every day
+        "00 06 * * *" # build at 06:00 UTC every day
         # (20 minutes after last ublue images start building)
 
   pull_request:
@@ -19,6 +19,65 @@ jobs:
       contents: read
       packages: write
       id-token: write
+
+    strategy:
+      fail-fast: false # stop GH from cancelling all matrix builds if one fails
+
+      matrix:
+        include:
+          - recipe: workstation
+            maximize_build_space: true
+
+          - recipe: workstation-nvidia
+            maximize_build_space: true
+
+          - recipe: laptop
+            maximize_build_space: true
+
+          - recipe: laptop-kinoite
+            maximize_build_space: true
+
+          - recipe: k8s-node
+            maximize_build_space: false
+
+          - recipe: k8s-node-hci-zfs-nvidia
+            maximize_build_space: false
+
+          - recipe: k8s-node-hci-zfs
+            maximize_build_space: false
+
+          - recipe: server
+            maximize_build_space: false
+
+          - recipe: bazzite
+            maximize_build_space: true
+
+          - recipe: bazzite-deck
+            maximize_build_space: true
+
+    steps:
+      - name: Build Custom Image
+        uses: blue-build/github-action@v1.8.1
+        with:
+          recipe: ${{ matrix.recipe }}.yml
+          cosign_private_key: ${{ secrets.SIGNING_SECRET }}
+          registry_token: ${{ github.token }}
+          pr_event_number: ${{ github.event.number }}
+          maximize_build_space: ${{ matrix.maximize_build_space }}
+          rechunk: true
+
+  isos:
+    name: Build ISOs from images
+
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+
+    needs:
+      - bluebuild
 
     strategy:
       fail-fast: false # stop GH from cancelling all matrix builds if one fails
