--- a/recipes/k8s-node.yml
+++ b/recipes/k8s-node.yml
@@ -26,4 +26,4 @@ modules:
   - from-file: components/kubernetes.yml
   - from-file: components/cockpit.yml
 
-  - type: signing # this sets up the proper policy & signing files for signed images to work fully
+  - type: signing
