chore: remove cockpit from k8s nodes and move it to server

--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -26,5 +26,7 @@ modules:
   - from-file: features/auto-blank-terminal.yml
 
   - from-file: components/cockpit.yml
+  - from-file: components/cockpit-zfs.yml
+  - from-file: components/cockpit-hci.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
