chore: clean up more packages from aurora-dx

--- a/recipes/cleanup/aurora-dx.yml
+++ b/recipes/cleanup/aurora-dx.yml
@@ -3,6 +3,27 @@ modules:
     remove:
       - ptyxis
       - p7zip
+      - code
+      - cascadia-code-fonts
+      - cockpit-bridge
+      - cockpit-machines
+      - cockpit-networkmanager
+      - cockpit-ostree
+      - cockpit-podman
+      - cockpit-selinux
+      - cockpit-storaged
+      - cockpit-system
+      - android-tools
+      - gnome-shell-extension-appindicator
+      - gnome-shell-extension-blur-my-shell
+      - gnome-shell-extension-caffeine
+      - gnome-shell-extension-dash-to-dock
+      - gnome-shell-extension-gsconnect
+      - gnome-shell-extension-logo-menu
+      - gnome-shell-extension-search-light
+      - gnome-shell-extension-tailscale-gnome-qs
+      - nautilus-gsconnect
+      - nautilus-open-any-terminal
 
   - type: default-flatpaks
     notify: false # Send notification after install/uninstall is finished (true/false)
