fix(kinoite): remove previous docker packages, and add docker-ce repo

--- a/recipes/components/containers.yml
+++ b/recipes/components/containers.yml
@@ -1,5 +1,23 @@
 modules:
   - type: rpm-ostree
+
+    remove:
+      - docker
+      - docker-client
+      - docker-client-latest
+      - docker-common
+      - docker-latest
+      - docker-latest-logrotate
+      - docker-logrotate
+      - docker-selinux
+      - docker-engine-selinux
+      - docker-engine
+
+  - type: rpm-ostree
+
+    repos:
+      - https://download.docker.com/linux/fedora/docker-ce.repo
+
     install:
       - docker-compose
       - podman-bootc
