--- a/.github/workflows/weekly-bluebuild.yml
+++ b/.github/workflows/weekly-bluebuild.yml
@@ -3,7 +3,7 @@ name: daily-bluebuild
 on:
   schedule:
     - cron:
-        "00 06 * * *" # build at 06:00 UTC every day
+        "00 06 * * TUE" # build at 06:00 UTC on Tuesdays
         # (20 minutes after last ublue images start building)
 
   pull_request:
