--- a/recipes/components/kodi.yml
+++ b/recipes/components/kodi.yml
@@ -1,8 +1,9 @@
 modules:
+  - type: bling
+    install:
+      - rpmfusion
+
   - type: rpm-ostree
-    repos:
-      - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-%OS_VERSION%.noarch.rpm
-      - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-%OS_VERSION%.noarch.rpm
     install:
       - kodi
       - kodi-firewalld
