fix: start kodi-standalone instead of kodi-gbm

--- a/recipes/features/kodi-as-greeter.yml
+++ b/recipes/features/kodi-as-greeter.yml
@@ -2,5 +2,5 @@ modules:
   - type: systemd
     system:
       enabled:
-        - kodi-gbm.service
-        - kodi-gbm-restart-on-resume.service
+        - kodi-standalone.service
+        - kodi-standalone-restart-on-resume.service
