--- a/recipes/home-theatre.yml
+++ b/recipes/home-theatre.yml
@@ -1,7 +1,7 @@
 # image will be published to ghcr.io/<user>/<name>
 name: home-theatre
 # description will be included in the image's metadata
-description: This is my personal OS image for home theatres.
+description: This is my personal OS image for home theatres that only runs Kodi.
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/ucore-minimal
