--- a/files/kodi-as-greeter/usr/lib/sysusers.d/kodi.conf
+++ b/files/kodi-as-greeter/usr/lib/sysusers.d/kodi.conf
@@ -11,16 +11,16 @@ m kodi video
 # other groups, see: /usr/lib/sysusers.d/arch.conf or basic.conf
 # m kodi network
 # m kodi power
-# m kodi tty
-# m kodi disk
+m kodi tty
+m kodi disk
 # m kodi storage
 # m kodi uucp
 
 # Ubuntu users only
 # uncomment the following line if the kodi user needs access to /etc/ttyxxxx
 # https://github.com/graysky2/kodi-standalone-service/issues/14
-# m kodi dialout
+m kodi dialout
 
 # uncomment the following line if you're running Ubuntu >=20 since they created
 # a new render group of which the kodi user needs to be a member
-# m kodi render
+m kodi render
