--- a/files/kodi-as-greeter/usr/lib/tmpfiles.d/kodi.conf
+++ b/files/kodi-as-greeter/usr/lib/tmpfiles.d/kodi.conf
@@ -1,1 +1,3 @@
-d /var/lib/kodi 0755 kodi kodi -
+# Type Path Mode User Group Age Argument
+d /var/lib/kodi 0750 kodi kodi - -
+Z /var/lib/kodi - kodi kodi - -
