--- a/files/systemd/system/kodi-standalone.service
+++ b/files/systemd/system/kodi-standalone.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Kodi standalone (GBM)
-After=remote-fs.target systemd-user-sessions.service network-online.target nss-lookup.target sound.target polkit.service systemd-vconsole-setup.service
-Requires=systemd-vconsole-setup.service
+After=remote-fs.target systemd-user-sessions.service network-online.target nss-lookup.target sound.target polkit.service
 Wants=network-online.target polkit.service
+Conflicts=getty@tty1.service
 
 [Service]
 User=kodi
