--- a/files/systemd/system/kodi-standalone.service
+++ b/files/systemd/system/kodi-standalone.service
@@ -5,9 +5,15 @@ Wants=network-online.target polkit.service
 Conflicts=getty@tty1.service
 
 [Service]
+User=kodi
+Group=kodi
 EnvironmentFile=/usr/share/kodi-standalone/env
+PAMName=login
 TTYPath=/dev/tty1
 ExecStart=/usr/bin/kodi-standalone
+TTYReset=yes
+TTYVHangup=yes
+TTYVTDisallocate=yes
 ExecStop=/usr/bin/killall --exact --wait kodi.bin
 Restart=on-abort
 StandardInput=tty
