fix(home-theatre): add kodi to the input group

--- a/files/kodi-as-greeter/usr/lib/sysusers.d/kodi.conf
+++ b/files/kodi-as-greeter/usr/lib/sysusers.d/kodi.conf
@@ -7,6 +7,7 @@ u kodi - "Kodi User" /var/lib/kodi
 # supplemental groups
 m kodi audio
 m kodi video
+m kodi input
 
 # other groups, see: /usr/lib/sysusers.d/arch.conf or basic.conf
 # m kodi network
