--- a/recipes/bazzite.yml
+++ b/recipes/bazzite.yml
@@ -10,7 +10,7 @@ image-version: 42 # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: cleanup/nano.yml
+  - from-file: cleanup/bazzite.yml
 
   - from-file: tools/general.yml
 
