--- a/recipes/server.yml
+++ b/recipes/server.yml
@@ -10,8 +10,7 @@ image-version: stable # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: cleanup/nano.yml
-  - from-file: cleanup/coreos-installer.yml
+  - from-file: cleanup/coreos.yml
 
   - from-file: tools/general.yml
   - from-file: tools/git-ssh.yml
@@ -23,9 +22,5 @@ modules:
   - from-file: features/raised-ulimits.yml
   - from-file: features/trust-custom-ca.yml
   - from-file: features/auto-blank-terminal.yml
-
-  - from-file: components/cockpit.yml
-  - from-file: components/cockpit-zfs.yml
-  - from-file: components/cockpit-hci.yml
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
